--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body {
     text-shadow: -2px 2px 0px var(--bg);
 }
 
+/* THEME SWITCHER */
 .theme-switch-wrapper {
     display: flex;
     align-items: center;
@@ -144,6 +145,7 @@ h2 {
 @media only screen and (max-width: 700px) {
     #heading {
         font-size: 1rem;
+        flex-direction: column-reverse;
     }
 
     #heading-title {
@@ -152,5 +154,6 @@ h2 {
 
     .info {
         font-size: 1rem;
+        white-space: wrap;
     }
 }
