--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ body {
     width: 100%;
 }
 
+a {
+    text-decoration: none;
+    color: var(--link);
+}
+
 #heading {
     background-color: var(--hl);
     text-align: center;
@@ -64,12 +69,6 @@ body {
     border-radius: 1rem;
     text-align: center;
 }
-
-.info a {
-    text-decoration: none;
-    color: var(--link);
-}
-
 
 h2 {
     margin: 0;
