--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,6 @@ h2 {
 @media only screen and (max-width: 700px) {
     #heading {
         font-size: 1rem;
-        flex-direction: column-reverse;
     }
 
     #heading-title {
@@ -105,6 +104,10 @@ h2 {
 
     #sub-heading {
         font-size: 1rem;
+    }
+
+    #infos {
+        flex-direction: column;
     }
 
     .info {
