--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,10 @@ a {
     font-weight: bold;
 }
 
+main {
+    min-height: 100vh;
+}
+
 #infos {
     display: flex;
     flex-wrap: wrap;
@@ -91,6 +95,26 @@ h2 {
 .forderung {
     padding: 15px 0;
     font-weight: bold;
+}
+
+footer {
+    background-color: lightgrey;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.footer-item {
+    padding: 0.5rem 0;
+}
+
+.footer-image {
+    font-size: 2.5rem;
+    height: 3rem;
+    border-radius: 50%;
 }
 
 @media only screen and (max-width: 700px) {
